<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#363b59">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edit_person_name"
        android:ems="10"
        android:id="@+id/editPersonName"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edit_person_surname"
        android:ems="10"
        android:id="@+id/editPersonSurname" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="119dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_edited_person"
        android:id="@+id/saveEditedPerson"
        android:layout_gravity="center_horizontal"
        android:background="#f2ae43" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main"
        android:id="@+id/backToMain"
        android:layout_gravity="center_horizontal"
        android:background="#56c0e0" />
    </LinearLayout>
</LinearLayout>